2022-04-18T02:03:26Z:
* notice: last 14d: all unq: 2244 11
* notice: prev accum: outdated-all outdated-unq / all unq: 13206 385 / 15441 417
* notice: next accum: outdated-all outdated-unq / all unq: 13367 389 / 15611 420
* notice: prev json diff // prev day diff: unq all: +1 +63 / -0 -37 // +1 +63 / -0 -37

2022-04-17T16:30:39Z:
* notice: last 14d: all unq: 2235 11
* notice: prev accum: outdated-all outdated-unq / all unq: 13206 385 / 15433 417
* notice: next accum: outdated-all outdated-unq / all unq: 13206 385 / 15441 417
* notice: prev json diff // prev day diff: unq all: +0 +62 / -0 -54 // +6 +196 / -2 -144

2022-04-17T08:26:32Z:
* notice: last 14d: all unq: 2227 11
* notice: prev accum: outdated-all outdated-unq / all unq: 13206 385 / 15412 411
* notice: next accum: outdated-all outdated-unq / all unq: 13206 385 / 15433 417
* notice: prev json diff // prev day diff: unq all: +6 +72 / -0 -51 // +6 +134 / -2 -90

2022-04-17T01:50:39Z:
* notice: last 14d: all unq: 2206 6
* notice: prev accum: outdated-all outdated-unq / all unq: 13033 381 / 15236 413
* notice: next accum: outdated-all outdated-unq / all unq: 13206 385 / 15412 411
* notice: prev json diff // prev day diff: unq all: +0 +62 / -2 -39 // +0 +62 / -2 -39

2022-04-16T16:31:01Z:
* notice: last 14d: all unq: 2203 9
* notice: prev accum: outdated-all outdated-unq / all unq: 13033 381 / 15223 412
* notice: next accum: outdated-all outdated-unq / all unq: 13033 381 / 15236 413
* notice: prev json diff // prev day diff: unq all: +1 +67 / -0 -54 // +3 +182 / -0 -153

2022-04-16T08:26:19Z:
* notice: last 14d: all unq: 2190 9
* notice: prev accum: outdated-all outdated-unq / all unq: 12881 379 / 15074 410
* notice: next accum: outdated-all outdated-unq / all unq: 13033 381 / 15223 412
* notice: prev json diff // prev day diff: unq all: +2 +115 / -0 -99 // +2 +115 / -0 -99

2022-04-15T16:09:01Z:
* notice: last 14d: all unq: 2193 9
* notice: prev accum: outdated-all outdated-unq / all unq: 12881 379 / 15058 410