@@ -1,6 +1,6 @@
 {
-  "timestamp" : "2022-04-18T02:03:26Z",
-  "count" : 119,
+  "timestamp" : "2022-04-18T08:28:23Z",
+  "count" : 70,
   "count_minmax" : [ 0, 156 ],
   "count_prev_day_inc" : 156,
   "count_prev_day_dec" : 135,
