@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-04-18T02:03:26Z",
-  "count" : 0,
-  "count_minmax" : [ 0, 0 ],
-  "count_prev_day_inc" : 63,
-  "count_prev_day_dec" : 37,
-  "uniques" : 0,
-  "uniques_minmax" : [ 0, 0 ],
-  "uniques_prev_day_inc" : 1,
+  "timestamp" : "2022-04-18T08:28:23Z",
+  "count" : 57,
+  "count_minmax" : [ 0, 57 ],
+  "count_prev_day_inc" : 120,
+  "count_prev_day_dec" : 86,
+  "uniques" : 1,
+  "uniques_minmax" : [ 0, 1 ],
+  "uniques_prev_day_inc" : 2,
   "uniques_prev_day_dec" : 0
 }
