@@ -1,3 +1,9 @@
+2022-04-18T08:28:23Z:
+* notice: last 14d: all unq: 2252 11
+* notice: prev accum: outdated-all outdated-unq / all unq: 13367 389 / 15611 420
+* notice: next accum: outdated-all outdated-unq / all unq: 13367 389 / 15619 421
+* notice: prev json diff // prev day diff: unq all: +1 +57 / -0 -49 // +2 +120 / -0 -86
+
 2022-04-18T02:03:26Z:
 * notice: last 14d: all unq: 2244 11
 * notice: prev accum: outdated-all outdated-unq / all unq: 13206 385 / 15441 417
